--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,14 @@ html {
   font-weight: 300;
 }
 
+figure {
+  margin: 0;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
+
 .container {
   max-width: 1440px;
   height: 100%;
@@ -15,9 +23,6 @@ html {
   padding: 0 95px;
   justify-content: space-between;
   align-items: center;
-}
-
-.logo {
 }
 
 nav {
@@ -66,6 +71,16 @@ nav li:last-of-type {
   font-size: 20px;
 }
 
+.btn-transparent {
+  background-color: transparent;
+  text-decoration: none;
+  border: solid 3px #ffccbc;
+  list-style: none;
+  color: #ffccbc;
+  text-align: center;
+  font-size: 20px;
+}
+
 .screen {
   position: relative;
   height: calc(100vh - 80px);
@@ -94,6 +109,9 @@ nav li:last-of-type {
 .title-large {
   font-size: 10vw;
 }
+.title-left {
+  text-align: left;
+}
 
 .title-pink {
   color: #ffccbc;
@@ -120,16 +138,19 @@ nav li:last-of-type {
   z-index: 3;
 }
 
-figure {
+.main-hero-img {
   position: absolute;
-  bottom: -18px;
+  width: 100%;
+  left: 0;
+  bottom: -5px;
   text-align: center;
 
   z-index: 2;
 }
 
-figure img {
+.main-hero-img img {
   max-width: 100%;
+  text-align: center;
 }
 
 .screen-pink {
@@ -163,16 +184,56 @@ figure img {
 .two-column {
   display: flex;
   height: 100%;
+  overflow: hidden;
 }
 
 .two-column > article {
   position: relative;
   width: 50%;
-  height: 100%;
 }
 
-.left-align-img {
+.text-box {
+  padding: 120px 160px 0 0;
+  text-align: left;
+}
+
+.text-box > .btn-transparent {
+  margin-top: 50px;
+}
+
+.right-align-img {
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -5px;
+}
+
+.right-align-img img {
+  max-width: 100%;
+}
+
+.centered-align-img {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.text-box > .text-black {
+  width: 50%;
+}
+
+.centered-align {
+  display: flex;
+  justify-content: center;
+}
+
+.text-content {
+  width: 70%;
+  margin-top: 15%;
+}
+
+.text-with-icon {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
