--- a/css/main.css
+++ b/css/main.css
@@ -13,14 +13,14 @@ figure {
 }
 
 .container {
-  max-width: 1440px;
+  width: 100vw;
   height: 100%;
   margin: 0 auto;
 }
 
 .page-header {
   display: flex;
-  height: 80px;
+  height: 10vh;
   padding: 0 95px;
   justify-content: space-between;
   align-items: center;
