--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   font-family: sans-serif;
-  font-weight: 300;
+  font-weight: 300px;
 }
 
 figure {
@@ -17,6 +17,8 @@ figure {
   height: 100%;
   margin: 0 auto;
 }
+
+/* Header */
 
 .page-header {
   display: flex;
@@ -54,6 +56,28 @@ nav li {
 nav li:last-of-type {
   margin-right: 48px;
 }
+
+/* Image-main */
+
+
+
+.main-hero-img {
+  position: absolute;
+  width: 50%;
+  left: 20%;
+  bottom: -5px;
+  text-align: center;
+
+  z-index: 2;
+}
+
+.main-hero-img img {
+  max-width: 80%;
+  text-align: center;
+}
+
+
+/* BTN-S */
 
 .btn {
   display: inline-block;
@@ -99,9 +123,12 @@ nav li:last-of-type {
   font-size: 20px;
 }
 
+
+/* Screen-s */
+
 .screen {
   position: relative;
-  height: calc(100vh - 80px);
+  height: calc(100vh - 10vh);
 }
 
 .screen-pink {
@@ -146,6 +173,9 @@ nav li:last-of-type {
 .screen-grey {
   background-color: #f5f5f5;
 }
+
+
+/* Titles and text */
 
 .principal-text {
   padding-top: 100px;
@@ -214,20 +244,6 @@ nav li:last-of-type {
   text-align: left;
 }
 
-.main-hero-img {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  bottom: -5px;
-  text-align: center;
-
-  z-index: 2;
-}
-
-.main-hero-img img {
-  max-width: 100%;
-  text-align: center;
-}
 
 .text-white,
 .text-pink {
@@ -388,4 +404,36 @@ nav li:last-of-type {
   max-width: 1440px;
   width: 100%;
   bottom: 80px;
+}
+
+/* Media queries */
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+  .main-hero-img img {
+    display: none;
+  }
+
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+} 
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+} 
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+ 
 }
