--- a/css/main.css
+++ b/css/main.css
@@ -23,20 +23,32 @@ figure {
 .page-header {
   display: flex;
   height: 10vh;
-  padding: 0 95px;
+  padding: 0 15px;
   justify-content: space-between;
   align-items: center;
 }
 
+@media only screen and (min-width: 768px) {
+  .page-header {
+    padding: 0 95px;
+  }
+}
+
 nav {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
+  display: none;
 }
 
 nav a {
   color: #0b4141;
   text-decoration: none;
+}
+
+@media only screen and (min-width: 768px) {
+  nav {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+  }
 }
 
 ul {
@@ -59,31 +71,45 @@ nav li:last-of-type {
 
 /* Image-main */
 
-
-
 .main-hero-img {
-  position: absolute;
-  width: 50%;
-  left: 20%;
-  bottom: -5px;
+  position: relative;
+  width: 100%;
   text-align: center;
+}
 
-  z-index: 2;
+@media only screen and (min-width: 768px) {
+  .main-hero-img {
+    position: absolute;
+    left: 0%;
+    bottom: -5px;
+
+    z-index: 2;
+  }
 }
 
 .main-hero-img img {
-  max-width: 80%;
+  max-width: 100%;
   text-align: center;
 }
 
+@media only screen and (min-width: 768px) {
+  .main-hero-img {
+    width: 50%;
+    left: 20%;
+  }
+
+  .main-hero-img img {
+    max-width: 80%;
+  }
+}
 
 /* BTN-S */
 
 .btn {
   display: inline-block;
-  height: 46px;
+  height: 36px;
   padding: 0 34px;
-  line-height: 46px;
+  line-height: 36px;
   border-radius: 40px;
 }
 
@@ -91,7 +117,8 @@ nav li:last-of-type {
   display: flex;
   align-items: center;
   gap: 10px;
-  height: 70px;
+  height: 46px;
+  line-height: 1em;
 }
 
 .btn-green {
@@ -110,7 +137,7 @@ nav li:last-of-type {
   list-style: none;
   color: #ffccbc;
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .btn-border-green {
@@ -123,12 +150,31 @@ nav li:last-of-type {
   font-size: 20px;
 }
 
+@media only screen and (min-width: 768px) {
+  .btn {
+    height: 46px;
+    line-height: 46px;
+  }
+  .btn-large {
+    height: 70px;
+    line-height: 46px;
+  }
+  .btn-transparent {
+    font-size: 20px;
+  }
+}
 
 /* Screen-s */
 
 .screen {
   position: relative;
-  height: calc(100vh - 10vh);
+  height: auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .screen {
+    height: calc(100vh - 10vh);
+  }
 }
 
 .screen-pink {
@@ -174,7 +220,6 @@ nav li:last-of-type {
   background-color: #f5f5f5;
 }
 
-
 /* Titles and text */
 
 .principal-text {
@@ -189,12 +234,12 @@ nav li:last-of-type {
 }
 
 .title-small {
-  font-size: 68px;
+  font-size: 38px;
   font-family: sans-serif;
 }
 
 .title-medium {
-  font-size: 80px;
+  font-size: 40px;
 }
 
 .title-large {
@@ -205,7 +250,7 @@ nav li:last-of-type {
 }
 
 .title-centered {
-  font-size: 50px;
+  font-size: 40px;
 }
 
 .title-pink {
@@ -244,6 +289,23 @@ nav li:last-of-type {
   text-align: left;
 }
 
+@media only screen and (min-width: 768px) {
+  .title-small {
+    font-size: 68px;
+    font-family: sans-serif;
+  }
+
+  .title-medium {
+    font-size: 80px;
+  }
+
+  .title-large {
+    font-size: 10vw;
+  }
+  .title-centered {
+    font-size: 50px;
+  }
+}
 
 .text-white,
 .text-pink {
@@ -271,28 +333,49 @@ nav li:last-of-type {
   display: flex;
   height: 100%;
   overflow: hidden;
+  flex-direction: column;
 }
 
 .two-column > article {
   position: relative;
-  width: 50%;
+  width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+  .two-column {
+    flex-direction: row;
+  }
+
+  .two-column > article {
+    width: 50%;
+  }
 }
 
 .text-box {
-  padding: 120px 160px 0 0;
+  padding: 120px 20px 0;
   text-align: left;
+  box-sizing: border-box;
 }
 
 .text-box > .btn-transparent {
   margin-top: 50px;
 }
-
+@media only screen and (min-width: 768px) {
+  .text-box {
+    padding: 120px 160px 0 0;
+  }
+}
 .right-align-img {
-  position: absolute;
-  left: 0;
-  bottom: -5px;
+  position: relative;
 }
 
+@media only screen and (min-width: 768px) {
+  .right-align-img {
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+  }
+}
 .right-align-img img {
   max-width: 100%;
 }
@@ -342,6 +425,7 @@ nav li:last-of-type {
 
 .testimonials {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   gap: 20px;
   width: 80%;
@@ -351,9 +435,16 @@ nav li:last-of-type {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  width: calc(100% / 3);
+  width: 100%;
 }
-
+@media only screen and (min-width: 768px) {
+  .testimonials {
+    flex-direction: row;
+  }
+  .testimonials-column {
+    width: calc(100% / 3);
+  }
+}
 .card {
   padding: 20px;
 
@@ -393,47 +484,51 @@ nav li:last-of-type {
 
 .footer-ctas {
   display: flex;
-  width: 100%;
-  gap: 48px;
+  width: 90%;
+  gap: 20px;
   margin-top: 48px;
   justify-content: center;
 }
 
 .footer-by-cornelia {
-  position: absolute;
-  max-width: 1440px;
-  width: 100%;
-  bottom: 80px;
+  position: relative;
+  padding: 80px 0 0 40px;
+  align-self: flex-start;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-ctas {
+    width: 100%;
+    gap: 48px;
+  }
+
+  .footer-by-cornelia {
+    position: absolute;
+    max-width: 1440px;
+    width: 100%;
+    bottom: 80px;
+    padding: 0;
+  }
 }
 
 /* Media queries */
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-
-  .main-hero-img img {
-    display: none;
-  }
-
-
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-  
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-
-} 
+}
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-
-} 
+}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
- 
 }
